force-app/main/default/objects/Position_Course__c/Position_Course__c.object-meta.xml
<CustomObject>
    <description>Standard courses for the related position.  Junction object to Course object.</description>
    <label>Position Course</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Position Course</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Position Courses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>