force-app/main/default/objects/Position_Course__c/fields/Course__c.field-meta.xml
<CustomField>
    <fullName>Course__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course</label>
    <referenceTo>Course__c</referenceTo>
    <relationshipLabel>Position Where This is a Standard Course</relationshipLabel>
    <relationshipName>Position_Courses</relationshipName>
    <type>Lookup</type>
</CustomField>