force-app/main/default/objects/Position_Course__c/fields/Course_Provider__c.field-meta.xml
<CustomField>
    <fullName>Course_Provider__c</fullName>
    <formula>Course__r.Account__r.Name</formula>
    <label>Course Provider</label>
    <type>Text</type>
</CustomField>